[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=7]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]

[node name="ShadowSprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="WanderController" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]

[node name="ProximityTimer" type="Timer" parent="."]

[connection signal="timeout" from="ProximityTimer" to="." method="_on_ProximityTimer_timeout"]
